--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -3,111 +3,78 @@
 
 .header-bg {
   background: #482E2C;
+  height: 102vh;
   overflow: hidden;
   position: absolute;
-  height: 100vh;
   top: 0;
   width: 100%;
-  // background-image: linear-gradient(43deg, #d9a7c7 0%, #fffcdc 100%);
-  // background: center / cover url(../images/kanata_looking_at_dragon.png);
+
   img {
-    position: relative;
-    height: 100vh;
+    height: 102vh;
     margin-left: 50%;
-    transform: translateX(-49.5%);
     min-width: 100%;
     object-fit: cover;
+    position: relative;
+    transform: translateX(-49.5%);
   }
 
   #dark-overlay {
     background: rgba(0,0,0,.5);
-    position: absolute;
-    z-index: 2;
     height: 100%;
-    width: 100%;
-    transition: 3s $easeOutQuart;
     opacity: 1;
+    position: absolute;
+    transition: 3s $easeOutQuart;
+    width: 100%;
+    z-index: 2;
   }
 }
 
-#header {
-  // background: $playlist-bg;
-   background: transparent;
-  position: relative;
+#site > header {
+  background: transparent;
   color: $header-text-color;
-  // z-index:10;
   height: 90vh;
+  position: relative;
   width: 100%;
 
-  #header-text-container {
-    user-select: none;
+  h1 {
     font: $stylized-font;
     font-size: Min(90px, 9vw);
-    width: 80vw;
     height: Min(90vh, 800px);
     position: relative;
-    z-index: 3;
-    white-space: nowrap;
     text-shadow: $textBorder4px;
+    user-select: none;
+    white-space: nowrap;
+    width: 80vw;
+    z-index: 3;
 
     @media (max-width: 500px) {
       text-shadow: $textBorder2px;
     }
-  }
 
-  #text-to-the-strongest {
-    position: fixed;
-    -webkit-font-smoothing: subpixel-antialiased;
-    backface-visibility: hidden;
-    top: 50%;
-    margin-left: -43%;
-    transform: translateY(-200%);
-    transition: 4s $easeOutQuart;
-    left: 45%;
-    opacity: 0;
-    // transform: translateY(-280%) translateX(-83%) translateZ(0);
-  }
-
-  #text-luknight {
-    position: fixed;
-    -webkit-font-smoothing: subpixel-antialiased;
-    backface-visibility: hidden;
-    top: 50%;
-    margin-right: -43%;
-    // margin-left: -43%;
-    // left: 50%;
-    transition: 4s $easeOutQuart;
-    left: 60%;
-    opacity: 0;
-  }
-
-  #cocoTatooContainer {
-    width: 100%;
-    position: relative;
-
-    #cocoTatooCircle {
+    span {
+      -webkit-font-smoothing: subpixel-antialiased;
+      backface-visibility: hidden;
+      opacity: 0;
       position: fixed;
-      width: 60vw;
-      max-width: 650px;
-      height: 90vh;
-      max-height: 650px;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      margin: 0 auto;
+      top: 50%;
 
-      div {
-        width: 100%;
-        height: 100%;
-
-        img {
-          margin: 5vh auto;
-          object-fit: contain;
-          width: 100%;
-          height: 100%;
-        }
+      &:nth-of-type(1) {
+        left: 45%;
+        margin-left: -43%;
+        transform: translateY(-200%);
+        transition: 4s $easeOutQuart;
       }
+
+      &:nth-of-type(2) {
+        left: 60%;
+        margin-right: -43%;
+        transition: 4s $easeOutQuart;
+      }
+    }
+
+    &.in-view span {
+      left: 55%;
+      opacity: 1;
     }
   }
 }
