--- a/src/styles/Playlist.scss
+++ b/src/styles/Playlist.scss
@@ -1,62 +1,63 @@
 @import 'theme.scss';
 @import 'utils.scss';
 
-#playlist-section {
+#playlist {
   position: relative;
   z-index: 4;
   background: $page-bg;
-}
-#playlist-strip-under-nav {
-    @include strip-under-nav;
-    background: $page-bg;
-}
 
+  #playlist-title {
+    @include gradient-title;
+    align-items: center;
+    display: flex;
+    font-size: unset;
+    justify-content: center;
+    margin: -0px auto 30px;
+    padding: 56px 30px 0;
+    text-align: center;
+    text-rendering: optimizeLegibility;
 
-#playlist-title {
-  margin: -0px auto 30px;
-  text-align: center;
-  display: flex;
-  align-items: center;
-  @include gradient-title;
-  font-size: unset;
-  justify-content: center;
-  text-rendering: optimizeLegibility;
-  padding: 56px 30px 0;
-  span.playlist-title {
-    background: -webkit-linear-gradient(45deg, $dark1, $med1);
-    background-clip: text;
-    margin-left: 30px;
-    font: $stylized-font;
-    font-size: 46px;
-    @media (max-width: 500px) {
-    font-size: 26px;
+    span.pl-title {
+      background: -webkit-linear-gradient(45deg, $dark1, $med1);
+      background-clip: text;
+      margin-left: 30px;
+      font: $stylized-font;
+      font-size: 46px;
+
+      @media (max-width: 500px) {
+        font-size: 26px;
+      }
     }
+
+    img {
+      width: 100px;
+      height: 100px;
+      display: inline-block;
+    }
+
+    .arrow-down { top: 6px; }
   }
-  img {
-    width: 100px;
-    height: 100px;
-    display: inline-block;
-  }
-  .arrow-down { top: 6px; }
 }
 
-#playlist-iframe {
-  padding: 30px 25px 0;
-  max-width: 800px;
+
+.responsive-video-wrapper {
   margin: 0 auto;
-}
+  max-width: 800px;
+  padding: 30px 25px 0;
 
-#video-responsive {
-  overflow: hidden;
-  padding: 0 25px 56.25%;
-  position: relative;
-  height: 0;
-  iframe {
-    border-radius: 7px;
-    left: 0;
-    top: 0;
-    height: 100%;
-    width: 100%;
-    position: absolute;
+  .responsive-video {
+    height: 0;
+    overflow: hidden;
+    padding: 0 25px 56.25%;
+    position: relative;
+
+    iframe {
+      border-radius: 7px;
+      height: 100%;
+      left: 0;
+      position: absolute;
+      top: 0;
+      width: 100%;
+    }
   }
 }
